<resources>
    <string name="app_name">MeetYou</string>
    <string name="cookie_and_private_police_accept">By clicking the Sign In or Registration button, you agree to our <b>Terms and Conditions</b>. You can learn about how we process your data in our <b>Privacy Policy</b> and <b>Cookie Policy</b>.</string>
    <string name="wrong_mail_format_message">Incorrect email format</string>
    <string name="zero_input_message">Please fill in all fields</string>
    <string name="success_sign_in_message">You have successfully signed in!</string>
    <string name="wrong_password_or_mail_message">Incorrect email or password</string>
    <string name="wrong_password_lenght_message">Password is too short!</string>
    <string name="wrong_password_chars_format_message">Password must contain at least one uppercase letter</string>
    <string name="password_has_spaces_message">Password should not contain spaces</string>
    <string name="wrong_confirm_password_message">Passwords do not match!</string>
    <string name="success_registration_message">Successful registration!</string>
    <string name="registration_error_message">Registration error, please try again</string>
    <string name="email_was_used_message">A user with this email is already registered!</string>
    <string name="registration_button">Register</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="mail_input_text">E-mail</string>
    <string name="password_input_text">Password</string>
    <string name="confirm_password_input_text">Confirm password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="cant_sign_in_button">Can\'t sign in</string>
    <string name="enter_birth_date_text">Enter your birth date:</string>
    <string name="enter_your_name_text">Enter your name</string>
    <string name="write_something_about_you">Write something about you...</string>
    <string name="who_are_you">Who are you?</string>
    <string name="confirm">Confirm</string>
    <string name="woman_button">Woman</string>
    <string name="man_button">Man</string>
    <string name="upload_all_photos_message">Please upload all 5 photos</string>
    <string name="wrong_date_message">Wrong date</string>
    <string name="data_saved_successfully_message">Data saved successfully</string>
    <string name="error_data_saving_message">Error during data saving</string>
    <string name="enter_date_in_full_message">Please enter date of birth in full</string>
    <string name="eighteen_years_message">Registration for persons under 18 years of age is prohibited</string>
    <string name="old_ages_message">Age must not exceed 72 years</string>
    <string name="bio_chars_message">The bio should be no more than 150 characters</string>
    <string name="name_chars_message">The name must not contain numbers or symbols</string>
    <string name="name_chars_count_message">The name must be no more than 30 characters</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="close">Close</string>
    <string name="choose_a_few_interests_message">Choose a few interests</string>
    <string name="okay">Okay</string>
    <string name="welcome">Welcome!</string>
    <string name="you_ve_been_successfully_registered_please_sign_in"><![CDATA[You\'ve been successfully registered! <\n>Please Sign In!.]]></string>
    <string name="pick_a_few_targets_message">Pick a few targets</string>
    <string name="select_nm_5_interests_message">Select no more than 5 interests!</string>
    <string name="data_not_available_message">Data is not available!</string>
    <string name="faq_support">FAQ/Support</string>
    <string name="avoid_list">Avoid list</string>
    <string name="profile_color">Profile color</string>
    <string name="global_search">Global search</string>
    <string name="vip_functions">Vip functions</string>
    <string name="premium_functions">Premium functions</string>
    <string name="luxe_functions">Luxe functions</string>
    <string name="other">Other</string>
    <string name="change_interests">Change interests</string>
    <string name="change_name">Change Name</string>
    <string name="update_photos">Update photos</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="choose_a_gender_message">Choose a gender!</string>
    <string name="remember_me">Remember me</string>
    <string name="choose_your_parameters">Choose your parameters</string>
    <string name="choose_your_preferred_partner_parameters">Choose your preferred partner parameters</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="attitude_to_smoking">Attitude to Smoking:</string>
    <string name="attitude_to_alcohol">Attitude to Alcohol:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_e_mail">Current E-mail</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="new_e_mail">New E-mail</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="confirm_e_mail_edit_text">Confirm e-mail</string>
    <string name="change_your_color">Change your color</string>
    <string name="current_name">Current Name</string>
    <string name="new_name">New Name</string>
    <string name="enter_name">Enter name</string>
    <string name="change_your_interests">Change your interests</string>
    <string name="change_bio">Change Bio</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_warning">Caution! Deleting your account is <b>permanent</b>. All data, messages, and connections will be lost forever. Please think carefully before clicking "Confirm." Contact support for assistance if needed. Thank you for being part of <b>MeetYou</b>.</string>
    <string name="you_are_not_signed_in_message">You are not signed in!</string>
    <string name="bio_was_copied_in_clipboard">Bio was copied in clipboard</string>
    <string name="name_was_copied_in_clipboard">Name was copied in clipboard</string>
    <string name="please_enter_new_name_message">Please enter new Name</string>
    <string name="vip_features">- Unlimited return\n\n\n- Global search\n\n\n- No ads</string>
    <string name="premium_features">- All VIP Features\n\n\n- Who liked you\n\n\n- 10 mega-sympathies\nper week\n\n\n- 5 profile boosts\nper month\n\n\n- Change profile color</string>
    <string name="luxe_features">- All Premium Features\n\n\n- Add comments to\nmega-sympathies\n\n\n- 30 mega-sympathies\nper week\n\n\n- 20 profile boosts\nper month\n\n\n- Avoid list</string>
    <string name="empty_saved_password_email_message">Saved email or password is empty. Please log in again.</string>
    <string name="change_bio_button_text">Change bio</string>
    <string name="something_went_wrong_message">Something went wrong!</string>
    <string name="age_slider">Age slider</string>
    <string name="to_exit_press_again_message">To exit, press again</string>
    <string name="mega_sympathy">Mega-Sympathy</string>
    <string name="enter_your_message">Enter your message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
