<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <TextView
        android:id="@+id/who_are_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183.83dp"
        android:text="@string/who_are_you"
        android:textColor="#2c59cc"
        android:textSize="25.59sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/male_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_bg_gray"
            android:gravity="center"
            android:text="@string/man_button"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="40dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/female_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_bg_gray"
            android:gravity="center"
            android:text="@string/woman_button"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/go_back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background_gray"
            android:text="@string/next_button"
            android:textColor="@color/neutral_dark_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_outline_background_blue"
            android:text="@string/back_button"
            android:textColor="@color/main" />
    </RelativeLayout>
</RelativeLayout>
