<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseParametersActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/choose_your_preferred_partner_parameters"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            />
        <!-- Add the Spinners and TextViews for the dropdown menus -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/go_back_button"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background_blue"
                android:text="@string/next_button"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_outline_background_blue"
                android:text="@string/back_button"
                android:textColor="@color/main" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_alignTop="@+id/main_header"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="85dp">

            <TextView
                android:id="@+id/height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/height"
                android:textColor="@color/main"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/height_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/height_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/height_spinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/weight"
                android:textColor="@color/main"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/weight_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/smoking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_spinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/attitude_to_smoking"
                android:textColor="@color/main"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/attitudeToSmokingSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/smoking_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/alcohol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/attitudeToSmokingSpinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/attitude_to_alcohol"
                android:textColor="@color/main"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/attitudeToAlcoholSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/alcohol_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
