<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeNameActivity"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/work_space_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/delete_account"
                android:textAllCaps="false"
                android:textColor="@color/main"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignTop="@+id/header_title"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/delete_account_warning"
                android:textColor="@color/main"
                android:textSize="14sp"
                android:textStyle="normal" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_outline_background_blue"
                android:hint="@string/enter_password"
                android:paddingLeft="15dp"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="14sp"
                android:inputType="textPassword"
                style="@style/CustomCursorStyleBlue"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/go_back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background_gray"
            android:text="@string/confirm"
            android:textColor="@color/neutral_dark_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_outline_background_blue"
            android:text="@string/back_button"
            android:textColor="@color/main" />
    </RelativeLayout>
</RelativeLayout>