<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity"
    android:background="@color/white">
    <TextView
        android:id="@+id/shoptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Shop"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/main"
        android:elevation="15dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_background_dark_gray"
        android:text="@string/back_button"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoptext"
        android:layout_above="@id/go_back_button"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buyvip"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/statusbannervip"
            android:text="@string/vip_features"
            android:textColor="@color/white"
            android:gravity="left"
            android:paddingTop="75dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="12sp"
            android:paddingLeft="15dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buyprem"
            android:layout_width="200dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_height="300dp"
            android:layout_marginLeft="160dp"
            android:background="@drawable/statusbannerprem"
            android:text="@string/premium_features"
            android:textColor="@color/white"
            android:gravity="right"
            android:paddingTop="59dp"
            android:textSize="11sp"
            android:paddingRight= "15dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buylux"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/statusbannerluxe"
            android:text="@string/luxe_features"
            android:textColor="@color/white"
            android:gravity="left"
            android:paddingTop="50dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="11sp"
            android:paddingLeft="15dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>