<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registration_window"
        android:layout_width="1227px"
        android:layout_height="2660px"
        android:background="@color/main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttons_space">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/sign_in_button"
                android:textColor="#2c59cc"
                android:textSize="17sp"
                android:textStyle="normal"
                android:background="@drawable/button_background" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="25dp"
                android:text="@string/back_button"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal"
                android:background="@drawable/button_outline_background" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/register_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/mail_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:hint="@string/mail_input_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="#b3ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffffff" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:hint="@string/password_input_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="#b3ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffffff" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="15dp"
                android:outlineAmbientShadowColor="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:checked="false"
                android:buttonTint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/remember_me_checkbox"
                android:layout_alignTop="@+id/remember_me_checkbox"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:text="@string/remember_me"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
